Change rem to em to accomodate widget, fix dominant-baseline bug on safari

--- a/src/define.scss
+++ b/src/define.scss
@@ -1,3 +1,4 @@
+// Colors
 $brown-dark: hsl(27, 47%, 13%);
 $brown-reg: hsl(27, 47%, 26%);
 $brown-icon: hsl(24, 28%, 52%);
@@ -15,3 +16,6 @@ $gray-border: hsla(0, 0%, 0%, 0.2);
 $gray-sep: hsla(0, 0%, 0%, 0.06);
 
 $orange-reg: hsl(27, 98%, 63%);
+
+// Lengths
+$explanation-header-height: 1.5em;
